docs: 5平台全面同步审计 + forge_26_2 追平1.0.7线
- forge_26_2 以 forge_26_1_2 为基准整模块迁移追平 1.0.7 线
- 2026-08-18 全面审计：5平台 clean compileJava 全通过
- test-forge-2612.sh 7/7 PASS, test-forge-262.sh 7/7 PASS
- check-version.sh 版本四同步 OK (1.0.6)
- check-animops-drift.sh 3 NeoForge 平台 OK
- 资源一致性补齐：4个物品定义从 forge_26_1_2 补入 forge_26_2
- AGENTS.md: 新增平台文件差异矩阵 (81/82/77/81)
- README.md: 新增 forge_26_2 平台行与项目状态
- CHANGELOG.md: 新增 forge_26_2 1.0.7 同步记录
- docs/TESTING-FORGE-262.md: 更新为1.0.7已追平状态
- docs/RELEASE.md: 新增 forge_26_2 发布门禁说明
- scripts/port-forge-262.py: 机械迁移脚本
- scripts/test-forge-262.sh: 自动化门禁脚本