@@ -25,6 +25,7 @@ CS2-Box 把 CS:GO 的开箱逻辑搬到 Minecraft：玩家手持箱子右键打�
 | `v26_1_2/` | 26.1.2 | 26.1.2.95 | 25 `--enable-preview` | decoupled rendering API + PIP 3D |
 | `v26_2/` | 26.2 | 26.2.0.59 | 25 `--enable-preview` | 最新版；decoupled API + PIP 3D 重写 |
 | `forge_26_1_2/` | 26.1.2 | MinecraftForge 26.1.2-64.1.0 | 25 `--enable-preview` | 实验模块：随 v26_1_2 同步开发，不入正式发行矩阵 |
+| `forge_26_2/` | 26.2 | MinecraftForge 26.2-65.1.1 | 25 `--enable-preview` | 实验模块：1.0.7 线已追平，不入正式发行矩阵 |
 
 > **已归档（EOL）平台**：v1_21_0 / v1_21_3 / v1_21_4 / v1_21_5 / v1_21_8 / v1_21_10 / v1_21_11 于 2026-08-09 移出仓库，最后状态保留在 tag `eol-legacy-21x-1.0.6`；旧版本玩家仍可下载既有发布产物。
 
@@ -49,13 +50,13 @@ CS2-Box 把 CS:GO 的开箱逻辑搬到 Minecraft：玩家手持箱子右键打�
 
 **前置要求**
 
-| 要求 | v1_21_1 | v26_1_2 / v26_2 | forge_26_1_2 |
+| 要求 | v1_21_1 | v26_1_2 / v26_2 | forge_26_1_2 / forge_26_2 |
 |---|---|---|---|
 | Java JDK | 21 | 25（`--enable-preview`） | 25（`--enable-preview`） |
-| Minecraft | 1.21.1 | 26.1.2 / 26.2 | 26.1.2 |
-| NeoForge / Forge | 21.1.248+ | 26.1.2.95 / 26.2.0.59（loader 11+） | MinecraftForge 26.1.2-64.1.0 |
+| Minecraft | 1.21.1 | 26.1.2 / 26.2 | 26.1.2 / 26.2 |
+| NeoForge / Forge | 21.1.248+ | 26.1.2.95 / 26.2.0.59（loader 11+） | MinecraftForge 26.1.2-64.1.0 / 26.2-65.1.1 |
 | Gradle | 9.5.1（wrapper 自动下载，无需手动安装） | 同左 | 同左 |
-| NeoGradle / ForgeGradle | 7.1.38 | 同左 | ForgeGradle 7.0.31 |
+| NeoGradle / ForgeGradle | 7.1.38 | 同左 | ForgeGradle 7.0.31/7.0.34 |
 
 > 互联网连接：首次构建需下载 NeoForged userdev 与依赖。
 
@@ -165,6 +166,7 @@ java -version   # v1_21_1 应显示 21.x；v26_1_2 / v26_2 应显示 25.x
 
 ## 文档导航
 
+- [docs/PLAYER-INTRO.md](./docs/PLAYER-INTRO.md) — 面向玩家的模组介绍与玩法说明
 - [docs/ARCHITECTURE.md](./docs/ARCHITECTURE.md) — 模块拓扑、核心抽象、数据流、多平台 GUI 渲染管线对比
 - [docs/PLATFORM-APIS.md](./docs/PLATFORM-APIS.md) — 3 平台 API 差异速查矩阵 + 主题展开开发指南（含 AnimRenderOps 渲染门面章节）
 - [docs/GETTING-STARTED.md](./docs/GETTING-STARTED.md) — 完整安装与首次运行步骤
@@ -217,13 +219,14 @@ MIT License —— Copyright 2024 Reclizer。详见 [LICENSE](./LICENSE)。
 
 ## 项目状态
 
-**当前发布版本**： `1.0.6`（维护中 3 平台：v1_21_1 / v26_1_2 / v26_2，共享同一 `mod_version`，jar 名 `csgobox-<mc>-<mod_version>.jar`；另有 `forge_26_1_2` 实验模块随 v26_1_2 同步开发、不入正式发行矩阵；v1_21_0/3/4/5/8/10/11 七个 EOL 平台已归档，最后状态在 tag `eol-legacy-21x-1.0.6`）
+**当前发布版本**： `1.0.6`（维护中 3 平台：v1_21_1 / v26_1_2 / v26_2，共享同一 `mod_version`，jar 名 `csgobox-<mc>-<mod_version>.jar`；另有 `forge_26_1_2` / `forge_26_2` 实验模块分别随 v26_1_2 / v26_2 同步开发、不入正式发行矩阵；v1_21_0/3/4/5/8/10/11 七个 EOL 平台已归档，最后状态在 tag `eol-legacy-21x-1.0.6`）
 
 **近期进度**（详见 [CHANGELOG.md](./CHANGELOG.md)）：
 
 - ✅ 1.0.6 落地：容器化布局（P1-1）、per-item 视觉基线（P1-3）、三档设计 token（P2-2）、动态 box item、教程系统、开箱排行榜、TACZ 检视视口、v26_2 平台扩展（详见 CHANGELOG.md）
 - ✅ AnimRenderOps 渲染门面：6 屏 + 3 助手渲染调用全部收口到每平台唯一的 `utils/AnimRenderOps.java`（13 个公开 op，`// era:` 头标注），零原始 draw 调用残留，签名一致性由 `scripts/check-animops-drift.sh` 守护（CI 已接线）；三平台 clean 编译 + common 测试通过，运行时回归清单见 docs/RUNTIME-UI-TESTING.md
 - ✅ v26_2 已落地：`neo_version=26.2.0.59`，`neogradle=7.1.38`，`pack_format=81`。PIP 3D 旋转已重写适配；运行时回归（开箱/进度/查看动画 + 成就触发）用户在 26.2 客户端验证通过。**HUD 提示**：MC 26.2 移除了 `Options.hideGui` 字段，已修复：通过 `Minecraft.gui.hud.toggle()/isHidden()` 包装为 `HudVisibility` 工具类，开箱动画屏自动隐藏 HUD。
+- ✅ forge_26_2 追平 1.0.7 线：以 `forge_26_1_2` 为基准迁移，5 平台 `clean compileJava` 全通过，门禁 7/7 PASS，资源一致性已补齐。
 - ⏳ 1.0.7/1.0.8 开发线（[未发布]）：批量开箱恢复、终端机谈判会话（随机磨损 + 无耐久物品磨损点数惩罚）、武库商小屋世界生成结构、JEI 开箱概率分类、`blurRadius` 背景模糊等
 
 **已禁用范围**（显式延期）：Cloth Config 回归、Forge 1.20.1 backport、玩家间交易（loot bind-on-open）。
